更改软件名称

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <activity android:name=".base.BaseActivity" />
 
         <provider
-            android:name="androidx.core.content.FileProvider"
+            android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.dibage.accountb.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
