--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,11 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
-
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 
@@ -75,5 +78,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     //圆角布局
     implementation 'com.gcssloop.widget:rclayout:1.6.0'
+    //网络请求框架retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
 
 }
