--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ apply plugin: 'org.greenrobot.greendao'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:leanback-v17:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:leanback-v17:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -68,7 +68,7 @@ dependencies {
     //RecyclerView适配器
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     //RecyclerView  侧滑删除
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.yanzhenjie:recyclerview-swipe:1.1.4'
     implementation 'com.google.code.gson:gson:2.8.2'
     //图片加载框架Glide
@@ -81,5 +81,9 @@ dependencies {
     //网络请求框架retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+    //加载中的 dialog  https://github.com/hss01248/DialogUtil/blob/master/README-ch.md
+    implementation ('com.github.hss01248:DialogUtil:master-SNAPSHOT'){
+        exclude group: 'com.android.support'
+    }
 
 }
