--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.example.licoba.guanjia"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.1.0"
+        versionCode 2
+        versionName "1.2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //设置支持的SO库架构
@@ -96,5 +96,7 @@ dependencies {
     implementation 'com.github.czy1121:loadinglayout:1.0.1'
     //腾讯bugly
     implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
+    // 事件订阅
+    implementation 'org.greenrobot:eventbus:3.2.0'
 
 }
