--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.example.licoba.guanjia"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 4
-        versionName "1.3.3.1-temp"
+        versionCode 5
+        versionName "1.3.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //设置支持的SO库架构
